# summer_school

drawing_project/: CMakeLists.txt  drawing.cpp  drawing_app
neural_nets/: cifar_10.py  fashion_mnist.py
recognition_project/: CMakeLists.txt  circle_reco.cpp  recognition_app
